@@ -2,10 +2,8 @@ package com.example.miniproject.domain.hotel.dto;
 
 import com.example.miniproject.domain.hotel.constant.*;
 import com.example.miniproject.domain.hotel.entity.Hotel;
+import com.example.miniproject.domain.hotel.entity.Notice;
 import com.example.miniproject.domain.hotel.entity.Room;
-import jakarta.persistence.Column;
-import jakarta.persistence.EnumType;
-import jakarta.persistence.Enumerated;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
@@ -15,7 +13,6 @@ import lombok.NoArgsConstructor;
 
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class HotelDTO {
 
@@ -73,6 +70,8 @@ public class HotelDTO {
 
         private List<ThumbnailDTO.HotelThumbnailsResponse> thumbnails;
 
+        private List<NoticeDTO.Response> notices;
+
         private BasicOptions basicOptions;
 
         private LocalTime checkIn;
@@ -99,14 +98,19 @@ public class HotelDTO {
 
             List<Room> rooms = hotel.getRooms().stream()
               .filter(room -> room.getRegisterStatus() == RegisterStatus.VISIBLE)
-              .collect(Collectors.toList());
+              .toList();
+
+            List<Notice> notices = hotel.getNotices().stream()
+              .filter(notice -> notice.getRegisterStatus() == RegisterStatus.VISIBLE)
+              .toList();
 
             return Response.builder()
               .id(hotel.getId())
               .nation(hotel.getNation())
               .name(hotel.getName())
               .description(hotel.getDescription())
-              .thumbnails(ThumbnailDTO.HotelThumbnailsResponse.from(hotel.getThumbnails()))
+              .thumbnails(ThumbnailDTO.HotelThumbnailsResponse.of(hotel.getThumbnails()))
+              .notices(NoticeDTO.Response.of(notices))
               .basicOptions(hotel.getBasicOptions())
               .checkIn(hotel.getCheckIn())
               .checkOut(hotel.getCheckOut())
